<resources>
    <string name="app_name">Quorri</string>
    <string name="action_settings">Settings</string>
    <string name="ai_walls">Computer:</string>
    <string name="button_1_text">Start Game</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="button_new_game">Start New Game</string>
    <string name="description_game">v.1.0</string>
    <string name="end_of_game_popup_ai_win">The Computer beat you</string>
    <string name="end_of_game_popup_user_win">You Won!</string>
    <string name="exit_game">Quit App</string>
    <string name="game_rules">Game Rules</string>
    <string name="h_wall">Horizontal Wall</string>
    <string name="hello_world">Quoridor</string>
    <string name="next">Next Move:</string>
    <string name="pawn">Pawn</string>
    <string name="rules_1">1. A player may make one move per turn by placing a wall or moving their pawn.</string>
    <string name="rules_2">2. When a player runs out of walls they must move their pawn.</string>
    <string name="rules_3">3. The pawn can move one square: forwards, backwards, left or right.</string>
    <string name="rules_4">4. The pawn must move around the walls.</string>
    <string name="rules_5">5. The walls must not be placed in a manner where they completely block a players path to the goal.</string>
    <string name="rules_6">6. When two pawns are on neighboring squares the opponents pawn can be jumped. If a wall is behind the pawn getting jumped, the player can move diagonally to either side of the jumped pawn.</string>
    <string name="rules_7">7. The game is complete when a player has moved their pawn to the opposite end of the game board.</string>
    <string name="test_push">test</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_rules">Game Rules</string>
    <string name="user_walls">You:</string>
    <string name="v_wall">Vertical Wall</string>
    <string name="walls_remaining">Walls remaining:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
