<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:textSize="40.0sp" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_centerHorizontal="true" />
    <TextView android:textSize="15.0sp" android:id="@id/rule1" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_1" android:layout_below="@id/textView" android:layout_gravity="center_vertical" />
    <TextView android:textSize="15.0sp" android:id="@id/rule2" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_2" android:layout_below="@id/rule1" />
    <TextView android:textSize="15.0sp" android:id="@id/rule3" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_3" android:layout_below="@id/rule2" />
    <TextView android:textSize="15.0sp" android:id="@id/rule4" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_4" android:layout_below="@id/rule3" />
    <TextView android:textSize="15.0sp" android:id="@id/rule5" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_5" android:layout_below="@id/rule4" />
    <TextView android:textSize="15.0sp" android:id="@id/rule6" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_6" android:layout_below="@id/rule5" />
    <TextView android:textSize="15.0sp" android:id="@id/rule7" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rules_7" android:layout_below="@id/rule6" />
</RelativeLayout>
