<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#fa1c00ee"
    android:padding="5.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:textSize="40.0sp" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hello_world" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:gravity="center_horizontal" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description_game" android:layout_alignParentEnd="true" />
    <Button android:textSize="25.0sp" android:id="@id/start_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="75.0dip" android:text="@string/button_1_text" android:layout_below="@id/description" android:layout_centerHorizontal="true" />
    <Button android:textSize="25.0sp" android:id="@id/rules_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/game_rules" android:layout_below="@id/start_button" android:layout_centerHorizontal="true" />
</RelativeLayout>
